check2.txt
cargo : warning: 
unused import: `once_
cell::sync::Lazy`
At line:1 char:1
+ cargo check -p 
frontend 2>&1 | 
Out-File -Encoding 
utf8 check2.txt
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (warning   
 : unused...ll::s    
ync::Lazy`:Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
 --> 
common\src\lib.rs:8:5
  |
8 | use once_cell::sy
nc::Lazy;
  |     
^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` (part 
of 
`#[warn(unused)]`) 
on by default

warning: `common` 
(lib) generated 1 
warning (run `cargo 
fix --lib -p common` 
to apply 1 
suggestion)
warning: unexpected 
`cfg` condition 
value: `ssr`
 --> frontend\src\com
ponents\reflection_fo
rm.rs:3:7
  |
3 | #[cfg(feature = 
"ssr")]
  |       
^^^^^^^^^^^^^^^
  |
  = note: expected 
values for `feature` 
are: `axum`, 
`leptos_axum`, and 
`tokio`
  = help: consider 
adding `ssr` as a 
feature in 
`Cargo.toml`
  = note: see <https:
//doc.rust-lang.org/n
ightly/rustc/check-cf
g/cargo-specifics.htm
l> for more 
information about 
checking conditional 
configuration
  = note: `#[warn(une
xpected_cfgs)]` on 
by default

warning: unexpected 
`cfg` condition 
value: `ssr`
 --> frontend\src\com
ponents\reflection_fo
rm.rs:6:7
  |
6 | #[cfg(feature = 
"ssr")]
  |       
^^^^^^^^^^^^^^^
  |
  = note: expected 
values for `feature` 
are: `axum`, 
`leptos_axum`, and 
`tokio`
  = help: consider 
adding `ssr` as a 
feature in 
`Cargo.toml`
  = note: see <https:
//doc.rust-lang.org/n
ightly/rustc/check-cf
g/cargo-specifics.htm
l> for more 
information about 
checking conditional 
configuration

warning: unused 
import: 
`leptos::prelude::*`
 --> frontend\src\com
ponents\reflection_fo
rm.rs:1:5
  |
1 | use 
leptos::prelude::*;
  |     
^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` (part 
of 
`#[warn(unused)]`) 
on by default

warning: unused 
import: `crate::compo
nents::glass_panel::G
lassPanel`
 --> frontend\src\pag
es\planning.rs:6:5
  |
6 | use 
c...lassPanel; /...
  |     ^...^^^^^^^^^

warning: unexpected 
`cfg` condition 
value: `ssr`
 --> frontend\src\ser
ver_functions.rs:3:7
  |
3 | #[cfg(feature = 
"ssr")]
  |       
^^^^^^^^^^^^^^^
  |
  = note: expected 
values for `feature` 
are: `axum`, 
`leptos_axum`, and 
`tokio`
  = help: consider 
adding `ssr` as a 
feature in 
`Cargo.toml`
  = note: see <https:
//doc.rust-lang.org/n
ightly/rustc/check-cf
g/cargo-specifics.htm
l> for more 
information about 
checking conditional 
configuration

warning: unused 
import: 
`leptos::prelude::*`
 --> frontend\src\ser
ver_functions.rs:1:5
  |
1 | use 
leptos::prelude::*;
  |     
^^^^^^^^^^^^^^^^^^

warning: `frontend` 
(lib) generated 6 
warnings (run `cargo 
fix --lib -p 
frontend` to apply 3 
suggestions)
    Checking 
frontend v0.1.0 (C:\U
sers\Trinity\Document
s\daydream\Day_Dream\
frontend)
error[E0433]: failed 
to resolve: use of 
unresolved module or 
unlinked crate `log`
 --> frontend\src\mai
n.rs:5:38
  |
5 |     _ = console_l
og::init_with_level(l
og::Level::Debug);
  |                  
                    
^^^ use of 
unresolved module or 
unlinked crate `log`
  |
  = help: if you 
wanted to use a 
crate named `log`, 
use `cargo add log` 
to add it to your 
`Cargo.toml`

error[E0425]: cannot 
find function 
`mount_to_body` in 
this scope
 --> frontend\src\mai
n.rs:8:5
  |
8 |     
mount_to_body(|| 
view! { <App/> })
  |     
^^^^^^^^^^^^^ not 
found in this scope
  |
help: consider 
importing one of 
these functions
  |
1 + use crate::mount:
:mount_to_body;
  |
1 + use leptos::mount
::mount_to_body;
  |

error[E0433]: failed 
to resolve: use of 
unresolved module or 
unlinked crate 
`console_log`
 --> frontend\src\mai
n.rs:5:9
  |
5 |     _ = console_l
og::init_with_level(l
og::Level::Debug);
  |         
^^^^^^^^^^^ use of 
unresolved module or 
unlinked crate 
`console_log`
  |
  = help: if you 
wanted to use a 
crate named 
`console_log`, use 
`cargo add 
console_log` to add 
it to your 
`Cargo.toml`

error[E0433]: failed 
to resolve: use of 
unresolved module or 
unlinked crate `conso
le_error_panic_hook`
 --> frontend\src\mai
n.rs:6:5
  |
6 |     console_error
_panic_hook::set_once
();
  |     ^^^^^^^^^^^^^
^^^^^^^^^^^ use of 
unresolved module or 
unlinked crate `conso
le_error_panic_hook`
  |
  = help: if you 
wanted to use a 
crate named `console_
error_panic_hook`, 
use `cargo add consol
e_error_panic_hook` 
to add it to your 
`Cargo.toml`

Some errors have 
detailed 
explanations: E0425, 
E0433.
For more information 
about an error, try 
`rustc --explain 
E0425`.
error: could not 
compile `frontend` 
(bin "frontend") due 
to 4 previous errors
